--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,4 +6,13 @@ $gray-4: #666666;
 $gray-5: #4d4d4d;
 $gray-6: #333333;
 
+$dark-primary-color: #2f3f9f;
+$primary-color: #3e50b5;
+$light-primary-color: #c5cae9;
+$text-icons-color: #fff;
+$accent-color: #ff5151;
+$primary-text-color: #212121;
+$secondary-text-color: #757575;
+$divider-color: #bdbdbd;
+
 $roboto: 'Roboto', sans-serif;
