--- a/css/_general.scss
+++ b/css/_general.scss
@@ -34,12 +34,12 @@ a{
   outline: none !important;
 }
 .search_bar{
-  background-color: $gray-5;
+  background-color: $primary-color;
   padding: 15px 0;
 
   form{
     padding: 15px;
-    background-color: $gray-6;
+    background-color: $dark-primary-color;
 
 
     $input_height: 60px;
@@ -74,7 +74,7 @@ a{
       position: relative;
       .check-button{
         color: #fff;
-        background-color: $gray-5;
+        background-color: $dark-primary-color;
       }
 
     }
