--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,5 +1,5 @@
 header{
-  background-color: $light-primary-color;
+  background-color: #eceef7 ;
 
   #top-nav-menu{
     overflow: hidden;
@@ -51,7 +51,8 @@ header{
     padding-bottom: 82px;
   }
   .nav>li>a:focus, .nav>li>a:hover{
-    background-color: $dark-primary-color;
+    background-color: $light-primary-color;
+    color: $text-icons-color;
   }
   .navbar{
     margin: 0;
@@ -78,13 +79,13 @@ header{
     }
 
     a{
-      color: $text-icons-color;
+      color: $primary-color;
       text-transform: uppercase;
       font-weight: 700;
     }
   }
   .navbar.default{
-    background-color: $primary-color;
+    background-color: $text-icons-color;
   }
   .navbar.fixed{
     background-color: $gray-6;
