--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,7 +1,7 @@
 footer#main-footer{
   overflow: hidden;
   padding: 20px 0 15px;
-  background-color: $gray-6;
+  background-color: $dark-primary-color;
   color: #fff;
   position: absolute;
   right: 0;
@@ -21,7 +21,7 @@ footer#main-footer{
       margin-right: 15px;
 
       a{
-        color: $gray-2;
+        color: $primary-color;
         @include transition(0.3s);
       }
       a:hover{
@@ -46,6 +46,6 @@ footer#main-footer{
     text-align: center;
     border-radius: 100%;
     background-color: $gray-0;
-    color: $gray-4;
+    color: $primary-color;
   }
 }
