--- a/css/_general.scss
+++ b/css/_general.scss
@@ -109,6 +109,7 @@ a{
         border: none;
         flex-grow: 5;
         padding: 5px 10px;
+        background-color: #f8f8f8;
       }
       label{
         margin: 0;
@@ -129,7 +130,7 @@ a{
       position: relative;
       .check-button{
         color: #fff;
-        background-color: $gray-5;
+        background-color: $light-primary-color;
       }
 
     }
@@ -141,7 +142,7 @@ a{
       padding-top: 4px;
       padding-bottom: 4px;
       color: #fff;
-      background-color: $gray-2;
+      background-color: $accent-color;
       height: $input_height;
       cursor: pointer;
     }
@@ -429,11 +430,30 @@ end of categories carousel
   }
 }
 
+.page-banner:after{
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(#000, 0.3);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 0;
+}
 .page-banner{
-  background-size: cover;
+  position: relative;
+  background-repeat: repeat-x;
+  background-attachment: fixed;
   background-position: center center;
 
+  .container-fluid{
+    position: relative;
+    z-index: 1;
+  }
+
   .container{
+    position: relative;
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -501,7 +521,7 @@ end of categories carousel
   }
 }
 .video-player{
-  background-color: $gray-6;
+  background-color: #fff;
   text-align: center;
   padding: 10px 0;
   position: relative;
@@ -517,8 +537,7 @@ end of categories carousel
     height: 100%;
     left: 0;
     top: 0;
-    color: #fff;
-    background-color: rgba($gray-6,0.4);
+    color: $primary-color;
     @include transition(0.3s);
   }
   .play-button:after{
