--- a/css/_page-etablissement.scss
+++ b/css/_page-etablissement.scss
@@ -16,12 +16,11 @@
         margin: 5px;
 
         a{
-          color: $gray-5;
+          color: #fff;
           display: block;
           width: 35px;
           padding: 10px 0;
           text-align: center;
-          background-color: $gray-1;
           border-radius: 100%;
           @include transition(0.3s);
         }
@@ -46,12 +45,11 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 225px;
       overflow: hidden;
     }
     .sub-section-title{
       font-weight: 700;
-      color: $gray-5;
+      color: $primary-color;
       margin-bottom: 10px;
     }
     p{
@@ -136,7 +134,7 @@
         margin-bottom: 5px;
       }
       .event_date{
-        background-color: $gray-5;
+        background-color: $accent-color;
         color: $gray-0;
         padding: 2px 10px;
         display: inline-block;
