--- a/css/_page-evenements.scss
+++ b/css/_page-evenements.scss
@@ -2,7 +2,7 @@
   .page-title{
     text-transform: uppercase;
     font-weight: 700;
-    color: $gray-5;
+    color: $accent-color;
     margin-bottom: 30px;
   }
   .months-list{
@@ -25,7 +25,7 @@
          @include transition(0.2s);
        }
        a:hover{
-         box-shadow: 0 2px $gray-5;
+         box-shadow: 0 2px $primary-color;
        }
      }
    }
@@ -52,7 +52,7 @@
         margin-bottom: 5px;
       }
       .event_date{
-        background-color: $gray-5;
+        background-color: $accent-color;
         color: $gray-0;
         padding: 2px 10px;
         display: inline-block;
@@ -132,12 +132,12 @@
             width: 100%;
             height: auto;
             padding: 15px;
-            background-color: rgba($gray-6, 0.3);
+            background-color: rgba($primary-color, 0.8);
             @include transition(0.3s);
 
             .article_location,
             .article_owner{
-              color: $gray-4;
+              color: $text-icons-color;
               font-size: 12px;
             }
             .article_owner{
@@ -146,8 +146,8 @@
           }
         }
         .event_date{
-          background-color: $gray-5;
-          color: $gray-0;
+          background-color: $accent-color;
+          color: $text-icons-color;
           padding: 2px 10px;
           display: inline-block;
           text-align: center;
@@ -173,7 +173,7 @@
           }
         }
         .article_title{
-          color: $gray-6;
+          color: $accent-color;
           font-weight: 700;
           font-size: 13px;
         }
