--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,11 +6,11 @@ $gray-4: #666666;
 $gray-5: #4d4d4d;
 $gray-6: #333333;
 
-$dark-primary-color: #0c3b31;
-$primary-color: #118c72;
-$light-primary-color: #7bb7ab;
+$dark-primary-color: #ECE2D0;
+$primary-color: #2E2D7B;
+$light-primary-color: #D5B9B2;
 $text-icons-color: #fff;
-$accent-color: #ff5151;
+$accent-color: #A26769;
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
 $divider-color: #bdbdbd;
